static/styles/style.css
.frame {
    background-color: transparent;
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100%;
  }
  
  .frame .overlap-wrapper {
    overflow-x: hidden;
    width: 1440px;
    height: 9254px;
  }
  
  .frame .overlap {
    position: relative;
    width: 1652px;
    height: 9300px;
    top: -46px;
    left: -212px;
  }
  
  .frame .desktop {
    position: absolute;
    width: 1440px;
    height: 9254px;
    top: 46px;
    left: 212px;
    background-color: #ffffff;
  }
  
  .frame .overlap-group {
    position: absolute;
    width: 1440px;
    height: 1378px;
    top: 1850px;
    left: 0;
    background-image: url(./img/frame-1000008159.png);
    background-size: 100% 100%;
  }
  
  .frame .ph-arrow-up-bold-wrapper {
    position: absolute;
    width: 51px;
    height: 51px;
    top: 24px;
    left: 1287px;
    background-color: #ffffff;
    border-radius: 25.5px;
    box-shadow: 0px 1px 4px 1px #00000040;
  }
  
  .frame .ph-arrow-up-bold {
    position: absolute;
    width: 20px;
    height: 20px;
    top: 16px;
    left: 15px;
  }
  
  .frame .img-wrapper {
    position: absolute;
    width: 51px;
    height: 51px;
    top: 24px;
    left: 1349px;
    background-color: #193924;
    border-radius: 25.5px;
  }
  
  .frame .div {
    position: absolute;
    width: 1440px;
    height: 80px;
    top: 0;
    left: 0;
  }
  
  .frame .image-wrapper {
    position: relative;
    width: 1442px;
    height: 82px;
    top: -1px;
    left: -1px;
    background-color: #ffffff;
    border-bottom-width: 1px;
    border-bottom-style: solid;
    border-color: #0000004c;
  }
  
  .frame .image {
    width: 81px;
    height: 72px;
    top: 4px;
    left: 45px;
    position: absolute;
    object-fit: cover;
  }
  
  .frame .navbar {
    display: inline-flex;
    align-items: flex-start;
    gap: 20px;
    position: absolute;
    top: 32px;
    left: 562px;
  }
  
  .frame .text-wrapper {
    position: relative;
    width: fit-content;
    margin-top: -1px;
    font-family: "Visby Round CF-Regular", Helvetica;
    font-weight: 400;
    color: #000000;
    font-size: 14px;
    letter-spacing: 0;
    line-height: normal;
  }
  
  .frame .text-wrapper-2 {
    position: relative;
    width: fit-content;
    margin-top: -1px;
    font-family: "Inter-Regular", Helvetica;
    font-weight: 400;
    color: #000000;
    font-size: 12px;
    letter-spacing: 0;
    line-height: normal;
  }
  
  .frame .div-wrapper {
    left: 1185px;
    background-color: #ffffff;
    position: absolute;
    width: 105px;
    height: 48px;
    top: 20px;
    border-radius: 5px;
  }
  
  .frame .text-wrapper-3 {
    position: absolute;
    top: 16px;
    left: 30px;
    font-family: "Inter-Regular", Helvetica;
    font-weight: 400;
    color: #000000;
    font-size: 12px;
    letter-spacing: 0;
    line-height: normal;
  }
  
  .frame .div-wrapper-2 {
    left: 1295px;
    background-color: var(--dark-green-nourish);
    position: absolute;
    width: 105px;
    height: 48px;
    top: 20px;
    border-radius: 5px;
  }
  
  .frame .text-wrapper-4 {
    position: absolute;
    top: 16px;
    left: 35px;
    font-family: "Inter-Regular", Helvetica;
    font-weight: 400;
    color: #ffffff;
    font-size: 12px;
    letter-spacing: 0;
    line-height: normal;
  }
  
  .frame .group {
    position: absolute;
    width: 413px;
    height: 346px;
    top: 7149px;
    left: 60px;
    background-color: #ffffff;
    border-radius: 8px;
    border: 1px solid;
    border-color: #d5dbdd;
  }
  
  .frame .group-2 {
    position: relative;
    width: 353px;
    height: 209px;
    top: 55px;
    left: 31px;
  }
  
  .frame .text-wrapper-5 {
    width: 241px;
    top: 0;
    left: 38px;
    font-family: var(--h1-5-font-family);
    font-weight: var(--h1-5-font-weight);
    font-size: var(--h1-5-font-size);
    text-align: center;
    line-height: var(--h1-5-line-height);
    position: absolute;
    color: #000000;
    letter-spacing: var(--h1-5-letter-spacing);
    font-style: var(--h1-5-font-style);
  }
  
  .frame .p {
    position: absolute;
    width: 349px;
    top: 47px;
    left: 0;
    font-family: var(--title-3-font-family);
    font-weight: var(--title-3-font-weight);
    color: #000000;
    font-size: var(--title-3-font-size);
    text-align: center;
    letter-spacing: var(--title-3-letter-spacing);
    line-height: var(--title-3-line-height);
    font-style: var(--title-3-font-style);
  }
  
  .frame .overlap-2 {
    position: absolute;
    width: 413px;
    height: 346px;
    top: 7535px;
    left: 60px;
    background-color: #ffffff;
    border-radius: 8px;
    border: 1px solid;
    border-color: #d5dbdd;
  }
  
  .frame .text-wrapper-6 {
    position: absolute;
    top: 54px;
    left: 62px;
    font-family: var(--h1-5-font-family);
    font-weight: var(--h1-5-font-weight);
    color: #000000;
    font-size: var(--h1-5-font-size);
    text-align: center;
    letter-spacing: var(--h1-5-letter-spacing);
    line-height: var(--h1-5-line-height);
    white-space: nowrap;
    font-style: var(--h1-5-font-style);
  }
  
  .frame .text-wrapper-7 {
    position: absolute;
    width: 349px;
    top: 101px;
    left: 31px;
    font-family: var(--title-3-font-family);
    font-weight: var(--title-3-font-weight);
    color: #000000;
    font-size: var(--title-3-font-size);
    text-align: center;
    letter-spacing: var(--title-3-letter-spacing);
    line-height: var(--title-3-line-height);
    font-style: var(--title-3-font-style);
  }
  
  .frame .group-wrapper {
    position: absolute;
    width: 414px;
    height: 346px;
    top: 7149px;
    left: 513px;
    background-color: #849765;
    border-radius: 8px;
    border: 1px solid;
    border-color: #d5dbdd;
  }
  
  .frame .group-3 {
    position: relative;
    width: 354px;
    height: 209px;
    top: 55px;
    left: 31px;
  }
/* ... */

